# bitgenerators

./: LICENSE  README.md  bitgenerators.opam  dune  dune-project  index.html
.github/workflows/: build-and-test.yml
bitgenerators/: index.html
bitgenerators/Bitgen/: index.html
bitgenerators/Bitgen/ChaCha/: index.html
bitgenerators/Bitgen/EFIIX64x48/: index.html
bitgenerators/Bitgen/LXM/: index.html
bitgenerators/Bitgen/PCG64/: index.html
bitgenerators/Bitgen/Philox4x64/: index.html
bitgenerators/Bitgen/Philox64/: index.html
bitgenerators/Bitgen/SFC64/: index.html
bitgenerators/Bitgen/SeedSequence/: index.html
bitgenerators/Bitgen/Xoshiro256/: index.html
lib/: bitgen.ml  chacha.ml  common.ml  dune  efiix.ml  lxm.ml  pcg.ml  philox.ml  seed.ml  sfc.ml  xoshiro.ml
test/: dune  test_bitgenerators.ml  test_chacha.ml  test_efiix.ml  test_lxm.ml  test_pcg.ml  test_philox.ml  test_seedseq.ml  test_sfc.ml  test_xoshiro.ml  testconf.ml
test/data/: chacha-testset-1.csv  chacha-testset-2.csv  efiix64-testset-1.csv  efiix64-testset-2.csv  xoshiro256-testset-1.csv  xoshiro256-testset-2.csv
